Makked cucumbre test

--- a/views/home.erb
+++ b/views/home.erb
@@ -2,7 +2,7 @@
 <body>
     <p>El balance de tu cuenta es:</p> <%= $monto %>
     <br>
-    <form action="/home" method="post">
+    <form action="/home1" method="post">
     <p>Monto: </p>
     <input type="text" name="monto">
     <br>
